--- a/style.css
+++ b/style.css
@@ -17,33 +17,64 @@ Contributors: jajtechnologies
 
 This theme, like WordPress, is licensed under the GPL.
 Use it to make something cool, have fun, and share what you've learned with others.
-
+!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
+THIS IS ONLY A BACKUP OF THE CUSTOMIZER. DO NOT DEPLOY TO STYLESHEET.
 */
-/* START Added by Larry at Codeable */
+body {
+	overflow-x: hidden;
+}
+.site-title{
+	color:#787878;
+	text-decoration: none;
+	font-size: 1rem;
+	display: block;
+  width: 100%;
+  margin-left: 4em
+}
+.current-menu-item a.nav-link {
+	border: none !important;
+}
+.current-menu-item a.nav-link{
+	color: green!important
+}
+.menu-bar {
+  background: rgba(255,255,255, .2);
+  padding: 15px 0;
+	border-bottom: 1px solid rgba(0,0,0,.14);
+}
+.navbar {
+	background-color: #ffffff;
+}
+@media (min-width: 992px) {
+  .mb-lg-0 {
+    margin-bottom: -2em !important;
+  }
+}
 .home-hero-wide {
     width:100%;
       padding:0;margin:0;
       height:100vh;
   }
-  .home .breadcrumb-section, .header-main {
-      display:none;
-  }
-  .home .blog-section {
+.home .breadcrumb-section
+{
+      display: none;
+}
+.home .blog-section {
       padding:0;
-  }
-  .home-cta-button a {
-      max-width: 226px;
-      margin: 1em auto;
-    text-align: center;
-    display: flex;
-  }
-  .padded-section-lg {
-      line-height: 1.722;
-  }
-  .padded-section-lg p:first-child {
-      margin-top: 1rem;
-  }
-  @media (min-width: 1400px) {
+}
+.home-cta-button a {
+  max-width: 226px;
+  margin: 1em auto;
+  text-align: center;
+  display: flex;
+}
+.padded-section-lg {
+  line-height: 1.722;
+}
+.padded-section-lg p:first-child {
+  margin-top: 1rem;
+}
+@media (min-width: 1400px) {
     .container, .container-lg, .container-md, .container-sm, .container-xl, .container-xxl,
       .home-cover-wide{
       max-width: 100vw;
@@ -100,4 +131,7 @@ Use it to make something cool, have fun, and share what you've learned with othe
   .shadow-text-grey {
       text-shadow: 0 0 2px #ccc;
   }
+.scrollingUp.scroll-btn{
+	background: #c0c0c0;
+}
   /* ENDS Added by Larry at Codeable */
