--- a/style.css
+++ b/style.css
@@ -17,50 +17,63 @@ Contributors: jajtechnologies
 
 This theme, like WordPress, is licensed under the GPL.
 Use it to make something cool, have fun, and share what you've learned with others.
+
 !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
 THIS IS ONLY A BACKUP OF THE CUSTOMIZER. DO NOT DEPLOY TO STYLESHEET.
+!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
 */
 body {
-	overflow-x: hidden;
+  overflow-x: hidden;
 }
-.site-title{
-	color:#787878;
-	text-decoration: none;
-	font-size: 1rem;
-	display: block;
-  width: 100%;
-  margin-left: 4em
+p {
+	color: #646464;
 }
-.current-menu-item a.nav-link {
-	border: none !important;
-}
-.current-menu-item a.nav-link{
-	color: green!important
-}
-.menu-bar {
-  background: rgba(255,255,255, .2);
-  padding: 15px 0;
-	border-bottom: 1px solid rgba(0,0,0,.14);
-}
-.navbar {
-	background-color: #ffffff;
+.header-main {
+	position: absolute;
+	top: 3%;
 }
 @media (min-width: 992px) {
-  .mb-lg-0 {
-    margin-bottom: -2em !important;
-  }
+	.header-main .navbar-nav .nav-item.dropdown .nav-link::after {
+		content: "";
+	}
+}
+.header-main .navbar .navbar-nav .nav-item:first-child .nav-link {
+  margin-left: 0px;
+}
+.site-title {
+  color: #787878;
+  text-decoration: none;
+  font-size: 1rem;
+  display: block;
+  width: 100%;
+  margin-left: 4em;
+}
+.current-menu-item a.nav-link {
+  border: none !important;
+}
+.current-menu-item a.nav-link {
+  color: green !important;
+}
+.menu-bar {
+  background: rgba(255, 255, 255, 0.2);
+  padding: 15px 0;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.14);
+}
+.navbar {
+  background-color: #ffffff;
 }
 .home-hero-wide {
-    width:100%;
-      padding:0;margin:0;
-      height:100vh;
-  }
-.home .breadcrumb-section
-{
-      display: none;
+  width: 100%;
+  padding: 0;
+  margin: 0;
+  height: 100vh;
+}
+.home .breadcrumb-section,
+.topbar{
+  display: none;
 }
 .home .blog-section {
-      padding:0;
+  padding: 0;
 }
 .home-cta-button a {
   max-width: 226px;
@@ -74,64 +87,99 @@ body {
 .padded-section-lg p:first-child {
   margin-top: 1rem;
 }
-@media (min-width: 1400px) {
-    .container, .container-lg, .container-md, .container-sm, .container-xl, .container-xxl,
-      .home-cover-wide{
-      max-width: 100vw;
-    }
-  }
-  
-  .home-cover-wide-column{
-    min-width: 100vw;
-  }
-  #about{
-      width: 100%;
-      padding: 0;
-    margin: 0;
-  }
-  .home-cover-wide-protect {
-     padding:0;
-      
-  }
-  #section-6,
-  .minimum-hgt-lrg,
-  .home-container-padded,
-  .padded-section-lg{
-      padding:30px 8vw;
-  }
-  .home-reviews-row{
-      min-height: 480px;
-      background: url(https://dev.mylifelawyer.com/wp-content/uploads/2024/07/divorce-guide-colorado.jpg)no-repeat;
-      background-size: 100% 100%;
-  }
-  .minimum-hgt-lrg{
-      min-height:480px;
-  }
-  .home-container-padded h5{
-      margin-bottom: 3rem;
-      margin-top: 1rem;
-      color: #646464
-  }
-  .inverted-carat{
-      transform: rotate(180deg);
-      text-align: center;
-    font-size: 60px;
-    position: relative;
-    top: -1em;
-    left: 1%;
-    color: #aaa;
-  }
-  .home-services-three{
-      margin: 0 auto;
-      width: 80%;
-  }
-  #section-11 {
-      margin-top: -10.3336em !important;
-  }
-  .shadow-text-grey {
-      text-shadow: 0 0 2px #ccc;
-  }
-.scrollingUp.scroll-btn{
-	background: #c0c0c0;
+
+.home-cover-wide-column {
+  min-width: 100vw;
 }
-  /* ENDS Added by Larry at Codeable */
+#about {
+  width: 100%;
+  padding: 0;
+  margin: 0;
+}
+.home-cover-wide-protect {
+  padding: 0;
+}
+#section-6,
+.minimum-hgt-lrg,
+.home-container-padded,
+.padded-section-lg {
+  padding: 30px 8vw;
+}
+.home-reviews-row {
+  min-height: 480px;
+  background: url(https://dev.mylifelawyer.com/wp-content/uploads/2024/07/divorce-guide-colorado.jpg)
+    no-repeat;
+  background-size: 100% 100%;
+}
+.minimum-hgt-lrg {
+  min-height: 480px;
+}
+.home-container-padded h5 {
+  margin-bottom: 3rem;
+  margin-top: 1rem;
+  color: #646464;
+}
+.inverted-carat {
+  transform: rotate(180deg);
+  text-align: center;
+  font-size: 60px;
+  position: relative;
+  top: -1em;
+  left: 1%;
+  color: #aaa;
+}
+.home-services-three {
+  margin: 0 auto;
+  width: 80%;
+}
+#section-11 {
+  margin-top: -10.3336em !important;
+}
+.wp-block-columns:not(.is-not-stacked-on-mobile) > .wp-block-column p{
+	width:82.5%;
+	margin-left: auto;
+  margin-right: auto;
+}
+.wp-block-buttons > .wp-block-button {
+  display: block;
+  margin: 0 auto;
+}
+.shadow-text-grey {
+  text-shadow: 0 0 2px #ccc;
+}
+.blog-section {
+	padding: 100px 75px;
+}
+.scrollingUp.scroll-btn {
+  background: #c0c0c0;
+}
+.footer-main {
+  padding: 40px;
+  margin-left: 2%;
+	color:#eee;
+}
+@media (min-width: 1200px) {
+  .h2, h2 {
+    font-size: 2rem;
+    margin-bottom: 2rem;
+  }
+}
+
+@media (min-width: 992px) {
+  .mb-lg-0 {
+    margin-bottom: -2em !important;
+  }
+}
+@media (min-width: 1400px) {
+  .container,
+  .container-lg,
+  .container-md,
+  .container-sm,
+  .container-xl,
+  .container-xxl,
+  .home-cover-wide {
+    max-width: 100vw;
+  }
+}
+
+/* ENDS Added by Larry at Codeable */
