--- a/style.css
+++ b/style.css
@@ -32,13 +32,43 @@ p {
 	position: absolute;
 	top: 3%;
 }
-@media (min-width: 992px) {
-	.header-main .navbar-nav .nav-item.dropdown .nav-link::after {
-		content: "";
-	}
+.custom-logo-link img {
+	margin-top: 12px;
+}
+.home-hero-wide:before{
+	content: url("https://dev.mylifelawyer.com/wp-content/uploads/2024/07/LesterLawLogoSmall-1.png");
+	position: absolute;
+	top:1em;
+	z-index: 9;
+}
+.hero-home-wide img.wp-clock-cover__image-background {
+	min-width: 100vw;
+}
+
+.home-hero-wide p em {
+	text-shadow: 0 0 1px #ddd
+}
+.navbar-nav .menu-item-3586 a {
+	color: #0faf97 !important;
 }
 .header-main .navbar .navbar-nav .nav-item:first-child .nav-link {
   margin-left: 0px;
+}
+.current-menu-item {
+	border-bottom: thin solid #0faf97;
+}
+.home .current-menu-item {
+	border-bottom: none;
+}
+.menu-bar .right-menu ul {
+	background: #ffffff;
+}
+.social-media-links {
+	display: flex;
+	flex-direction: row;
+	margin-top: 1.444em;
+	font-size:x-large;
+	padding-top: 1.4em !important;
 }
 .site-title {
   color: #787878;
@@ -52,7 +82,7 @@ p {
   border: none !important;
 }
 .current-menu-item a.nav-link {
-  color: green !important;
+  color: #646464 !important;
 }
 .menu-bar {
   background: rgba(255, 255, 255, 0.2);
@@ -81,6 +111,15 @@ p {
   text-align: center;
   display: flex;
 }
+.home-reviews-row {
+	padding-top: 5.5em;
+}
+.home-reviews-blockquote {
+	background: transparent;
+	border-left: none;
+	max-width: 64%;
+	margin:1em auto;
+}
 .padded-section-lg {
   line-height: 1.722;
 }
@@ -99,12 +138,7 @@ p {
 .home-cover-wide-protect {
   padding: 0;
 }
-#section-6,
-.minimum-hgt-lrg,
-.home-container-padded,
-.padded-section-lg {
-  padding: 30px 8vw;
-}
+
 .home-reviews-row {
   min-height: 480px;
   background: url(https://dev.mylifelawyer.com/wp-content/uploads/2024/07/divorce-guide-colorado.jpg)
@@ -150,6 +184,15 @@ p {
 .blog-section {
 	padding: 100px 75px;
 }
+summary {
+  background: #fafafa;
+  padding: 15px;
+  border: thin solid #ddd;
+  margin-bottom: 8px;
+}
+h2.wp-block-heading {
+	margin-bottom: .222em;
+}
 .scrollingUp.scroll-btn {
   background: #c0c0c0;
 }
@@ -158,16 +201,33 @@ p {
   margin-left: 2%;
 	color:#eee;
 }
+
 @media (min-width: 1200px) {
   .h2, h2 {
     font-size: 2rem;
     margin-bottom: 2rem;
   }
+	.container{
+		max-width: 2200px;
 }
-
 @media (min-width: 992px) {
+	.header-main .navbar-nav .nav-item.dropdown .nav-link::after {
+		content: "";
+	}
   .mb-lg-0 {
     margin-bottom: -2em !important;
+  }
+	#section-6,
+.minimum-hgt-lrg,
+.home-container-padded,
+.padded-section-lg {
+  padding: 30px 8vw;
+}
+	.home-hero-wide p.has-x-large-font-size {
+	font-size: 64px !important;
+	font-weight: 600;
+	color: #575656 !important;
+	text-shadow: 0 0 1px #aff;
   }
 }
 @media (min-width: 1400px) {
@@ -181,5 +241,4 @@ p {
     max-width: 100vw;
   }
 }
-
 /* ENDS Added by Larry at Codeable */
