--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ Theme URI: https://lite.preview.artechthemes.com/
 Author: Artech Themes
 Author URI: https://artechthemes.com/
 Description: The Artech Business Theme Child theme for making changes to the original theme without having them overwritten by any updates.
-Version: 2.7
+Version: 1.1
 Template: artech
 Tested up to: 6.5
 Requires PHP: 5.6
@@ -17,5 +17,335 @@ Contributors: jajtechnologies
 
 This theme, like WordPress, is licensed under the GPL.
 Use it to make something cool, have fun, and share what you've learned with others.
-
+as of Jul 23 14:00
 */
+body {
+  overflow-x: hidden;
+}
+p {
+	color: #646464;
+}
+.header-main {
+	position: absolute;
+	top: 3%;
+}
+.custom-logo-link img {
+	margin-top: 12px;
+}
+.home-hero-wide:before{
+	content: url("https://dev.mylifelawyer.com/wp-content/uploads/2024/07/LesterLawLogoSmall-1.png");
+	position: absolute;
+	top:1em;
+	z-index: 9;
+}
+.hero-home-wide img.wp-clock-cover__image-background {
+	min-width: 100vw;
+}
+
+.home-hero-wide p em {
+	text-shadow: 0 0 1px #ddd
+}
+.navbar-nav .menu-item-3586 a {
+	color: #0faf97 !important;
+}
+.header-main .navbar .navbar-nav .nav-item:first-child .nav-link {
+  margin-left: 0px;
+}
+.current-menu-item {
+	border-bottom: thin solid #0faf97;
+}
+.home .current-menu-item {
+	border-bottom: none;
+}
+.menu-bar .right-menu ul {
+	background: #ffffff;
+}
+.social-media-links {
+	display: flex;
+	flex-direction: row;
+	margin-top: 1.444em;
+	font-size:x-large;
+	padding-top: 1.4em !important;
+}
+.site-title {
+  color: #787878;
+  text-decoration: none;
+  font-size: 1rem;
+  display: block;
+  width: 100%;
+  margin-left: 4em;
+}
+.current-menu-item a.nav-link {
+  border: none !important;
+}
+.current-menu-item a.nav-link {
+  color: #646464 !important;
+}
+.menu-bar {
+  background: rgba(255, 255, 255, 0.2);
+  padding: 15px 0;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.14);
+}
+.navbar {
+  background-color: #ffffff;
+}
+.home-hero-wide {
+  width: 100%;
+  padding: 0;
+  margin: 0;
+  height: 100vh;
+}
+.home .breadcrumb-section,
+.topbar{
+  display: none;
+}
+.home .blog-section {
+  padding: 0;
+}
+.home-cta-button a {
+  max-width: 226px;
+  margin: 1em auto;
+  text-align: center;
+  display: flex;
+}
+.home-reviews-row {
+	padding-top: 5.5em;
+}
+.home-reviews-blockquote {
+	background: transparent;
+	border-left: none;
+	max-width: 64%;
+	margin:1em auto;
+}
+.padded-section-lg {
+  line-height: 1.722;
+}
+.padded-section-lg p:first-child {
+  margin-top: 1rem;
+}
+
+.home-cover-wide-column {
+  min-width: 100vw;
+}
+#about {
+  width: 100%;
+  padding: 0;
+  margin: 0;
+}
+.home-cover-wide-protect {
+  padding: 0;
+}
+
+.home-reviews-row {
+  min-height: 480px;
+  background: url(https://dev.mylifelawyer.com/wp-content/uploads/2024/07/divorce-guide-colorado.jpg)
+    no-repeat;
+  background-size: 100% 100%;
+}
+.minimum-hgt-lrg {
+  min-height: 480px;
+}
+.home-container-padded h5 {
+  margin-bottom: 3rem;
+  margin-top: 1rem;
+  color: #646464;
+}
+.inverted-carat {
+  transform: rotate(180deg);
+  text-align: center;
+  font-size: 60px;
+  position: relative;
+  top: -1em;
+  left: 1%;
+  color: #aaa;
+}
+.home-services-three {
+  margin: 0 auto;
+  width: 80%;
+}
+#section-11 {
+  margin-top: -10.3336em !important;
+}
+#section-6 .wp-block-media-text__media img {
+	max-width: fit-content;
+  vertical-align: baseline;
+	width:45px;
+	height: 45px;
+	position:relative;
+	right:-2em;
+}
+.wp-block-columns:not(.is-not-stacked-on-mobile) > .wp-block-column p{
+	width:82.5%;
+	margin-left: auto;
+  margin-right: auto;
+}
+.wp-block-buttons > .wp-block-button {
+  display: block;
+  margin: 0 auto;
+}
+#created {
+	margin-top: 0;
+}
+#created h2 {
+	margin-top: 30px;
+	margin-bottom:30px;
+}
+.no-radius-btn .wp-block-button a {
+	border-radius: 0;
+}
+.medium-width-hr {
+	width: 480px;
+}
+#thinking h4 {
+	font-size: 18px;
+}
+.underlined-text {
+	text-decoration: underline;
+	line-height: 2;
+}
+.shadow-text-grey {
+  text-shadow: 0 0 2px #ccc;
+}
+.blog-section {
+	padding: 100px 75px;
+}
+summary {
+  background: #fafafa;
+  padding: 15px;
+  border: thin solid #ddd;
+  margin-bottom: 8px;
+}
+h2.wp-block-heading {
+	margin-bottom: .222em;
+}
+.span-one-third {
+	width:34%;
+	margin: 1.67em auto;
+}
+.scrollingUp.scroll-btn {
+  background: #c0c0c0;
+}
+.footer-main .row{
+  padding: 40px;
+  margin-left: 2%;
+	color:#eee;
+	display: flex;
+	justify-content: space-between;
+}
+.footer-main a {
+	text-decoration: none;
+}
+.footer-item h4 { 
+	color: #fd5052;
+}
+.logo-image {
+	text-align: center;
+  border-top: thin solid #222;
+  padding-top: 30px;
+  padding-bottom: 30px;
+}
+.copyright-tagline {
+	text-align:center;
+	line-height:1.8;
+}
+.post-content .meta span a {
+	color: gray;
+	margin-left: -4px;
+  text-transform: uppercase;
+	padding-bottom: 12px;
+  display: inline-flex;
+}
+.post-content .meta .admin,
+.post-content .meta i,
+.lps-taxonomy.category {
+	display: none;
+}
+.nav-links a.page-numbers {
+	padding: 6px 12px;
+	background: #eee;
+}
+.nav-links .page-numbers.current {
+	padding: 6px 12px;
+} 
+.mc-inbox-section {
+	margin-bottom:-6.1em;
+	width: 100%;
+	padding: 0;
+}
+.mc-inbox-section #mc_embed_signup .mc-field-group {
+  clear: left;
+  position: relative;
+  width: 35%;
+  padding-bottom: 3%;
+  min-height: 50px;
+  margin: 0 auto;
+}
+@media screen and (max-width: 767px) {
+	.blog-section{
+		padding:15px;
+	}
+}
+@media (min-width: 1200px) {
+  .h2, h2 {
+    font-size: 2rem;
+    margin-bottom: 2rem;
+  }
+	.container{
+		max-width: 2200px;
+	}
+
+}
+@media (min-width: 992px) {
+	.header-main .navbar-nav .nav-item.dropdown .nav-link::after {
+		content: "";
+	}
+		.blog .blog-section .col-lg-6 {
+		width:33.33336%;
+			padding: 15px 30px;
+	}
+	.blog .blog-section .row .col-lg-6:last-of-type {
+		display: grid;
+    width: 100%;
+    grid-template-columns: auto auto auto;
+    gap: 60px;
+	}
+  .mb-lg-0 {
+    margin-bottom: -2em !important;
+  }
+	#section-6,
+.minimum-hgt-lrg,
+.home-container-padded,
+.padded-section-lg {
+  padding: 30px 8vw;
+}
+	.home-hero-wide p.has-x-large-font-size {
+	font-size: 64px !important;
+	font-weight: 600;
+	color: #575656 !important;
+	text-shadow: 0 0 1px #aff;
+  }
+}
+@media (min-width: 1400px) {
+  .container,
+  .container-lg,
+  .container-md,
+  .container-sm,
+  .container-xl,
+  .container-xxl,
+  .home-cover-wide {
+    max-width: 100vw;
+  }
+	.single-portfolio .blog-section {
+	width:82.5%;
+	margin: 0 auto;
+}
+.single-portfolio .blog-section .post-image {
+	width:82.5%;
+	margin: 1em auto;
+}
+.single-portfolio .blog-section .post-item {
+	padding: 15px 45px;
+}
+
+}
+/* ENDS Added by Larry at Codeable */
