--- a/style.css
+++ b/style.css
@@ -96,7 +96,8 @@ p {
   height: 100vh;
 }
 .home .breadcrumb-section,
-.topbar{
+.topbar,
+.sp-testimonial-post-title {
   display: none;
 }
 .home .blog-section {
@@ -109,13 +110,31 @@ p {
   display: flex;
 }
 .home-reviews-row {
-	padding-top: 5.5em;
+	padding-top: 2.75em; 
 }
 .home-reviews-blockquote {
 	background: transparent;
 	border-left: none;
 	max-width: 64%;
 	margin:1em auto;
+}
+.home-reviews-row .wp-block-button__link {
+	border: 2px solid #fff;
+	position: relative;
+  top: 1em;
+}
+#sp-testimonial-free-wrapper-4505 .sp-testimonial-free-section .sp-testimonial-client-testimonial .sp-testimonial-content p {
+	text-align: left;
+}
+#sp-testimonial-free-wrapper-4461 .sp-testimonial-free-section .testimonial-nav-arrow {
+  border: 1px solid #ccc;
+  color: #ccc;
+}
+#sp-testimonial-free-wrapper-4461 .sp-testimonial-free-section {
+  margin-bottom: 28px;
+}
+#sp-testimonial-free-wrapper-4505.sp-testimonial-free-wrapper {
+	width: 100%;
 }
 .padded-section-lg {
   line-height: 1.722;
@@ -135,12 +154,20 @@ p {
 .home-cover-wide-protect {
   padding: 0;
 }
-
+.hidden-anchor {
+	visibility: hidden;  
+  width: 100%;
+}
 .home-reviews-row {
   min-height: 480px;
   background: url(https://dev.mylifelawyer.com/wp-content/uploads/2024/07/divorce-guide-colorado.jpg)
     no-repeat;
-  background-size: 100% 100%;
+  background-size: 100% 130%;
+  background-position: center;
+}
+.sp-testimonial-free-wrapper {
+	width: 63%;
+	margin: 0 auto;
 }
 .minimum-hgt-lrg {
   min-height: 480px;
@@ -155,9 +182,10 @@ p {
   text-align: center;
   font-size: 60px;
   position: relative;
-  top: -1em;
+  top: -0.78em;
   left: 1%;
-  color: #aaa;
+  color: cadetblue;
+  font-weight: 700;
 }
 .home-services-three {
   margin: 0 auto;
@@ -174,6 +202,10 @@ p {
 	position:relative;
 	right:-2em;
 }
+@media (min-width: 782px) {
+  .wp-block-columns:not(.is-not-stacked-on-mobile) > .wp-block-column {
+	  margin-left: -12px;
+	}
 .wp-block-columns:not(.is-not-stacked-on-mobile) > .wp-block-column p{
 	width:82.5%;
 	margin-left: auto;
@@ -310,11 +342,86 @@ h2.wp-block-heading {
 .page-template-twowide .blog-section .post-item {
 	border: none;
 }
-.page-template-twowide .post-title {
+.page-template-twowide .post-title,
+.widget_recent_entries .widgettitle {
 	display: none;
+}
+.also-like {
+	position: absolute;
+	top: 0;
+}
+.crp_related h4 {
+text-align: center;
+  background: #fff;
+  width: fit-content;
+  position: relative;
+  z-index: 99;
+  bottom: 10px;
+  margin: 1em auto;
+  padding: 0 16px;
+}
+.crp_related::before {
+	content: "";
+  border-bottom: thin solid #ccc;
+  display: block;
+  width: 100%;
+  z-index: 4;
+  position: relative !important;
+  top: 30px;
+	margin-top:4em;
+}
+.crp_related.crp-masonry ul li{
+	animation: wzslideup none;
+  -webkit-animation: wzslideup none;
+  -moz-animation: wzslideup none;
+	padding:20px;
+	min-height: 220px;
+	box-shadow:none;
+	border: none;
+} /*
+.also-like-horiz {
+	border-bottom: thin solid #ccc;
+  display: block;
+  width: 87%;
+  z-index: 4;
+  position: relative;
+  margin-bottom: 2em;
+  margin-left: auto;
+  margin-right: auto;
+}
+.inline-might-like {
+	list-style: none;
+	display: grid;
+	grid-template-columns: auto auto auto;
+}
+.inline-might-like a {
+	text-decoration: none;
+}
+.inline-might-like a:hover {
+	color: cadetblue;
+}
+.inline-might-like img.aligncenter {
+	margin: 5px auto 15px auto;
+  display: block;
+}
+.inline-might-like h4 {
+	font-weight: lighter;
+	font-size: large;
+	text-align: center;
+}
+.inline-might-like li {
+	padding: 0 35px;
+} */
+@media (max-width: 768px) {
+	.inline-might-like {
+		grid-template-columns: auto;
+	}
 }
 .padd-top-lg {
 	padding-top: 120px;
+}
+.centered-col {
+	margin: 0 auto;
 }
 .footer-section{
 	background: #000000 !important;
@@ -396,12 +503,27 @@ h2.wp-block-heading {
   margin-top: 1rem;
 	text-transform: uppercase;
 }
-.post-content a:not(.btn) {
+.blog .post-content p {
+	font-size: smaller;
+}
+.post-content a:hover:not(.btn) {
 	color: #0faf97;
 	text-decoration: none;
 }
+.post-content .post-title a {
+	font-weight: lighter;
+  font-size: 16px;
+  color: #646464;
+  text-transform: initial;
+}
 .single .meta > .mdot {
 	margin-right:6px;
+}
+.archive .blog-section {
+	margin-top: 3em'
+}
+.archive .post-content .post-title a{
+	font-size: 24px;
 }
 h2 strong,
 h3 strong,
@@ -415,4 +537,50 @@ h5 strong{
 }
 .line-height-lg {
 	line-height: 1.75;
+}
+	#block-23.widget_block .aligncenter {
+	width: 90%;
+  margin: .5em auto;
+	color: currentColor;
+}
+.sidebar .widget .wp-block-search__inside-wrapper .wp-block-search__button {
+	background: #fff;
+	border: 1px solid #999;
+}
+.sidebar .widget:not(.sidebar .widget > .widget) {
+	background-color: transparent;
+	color: #222;
+}
+/* #0faf97 primary-green */
+.navbar .navbar-nav li.dropdown .dropdown-toggle {
+	background: #0faf97 !important;
+}
+.medium-width-hr {
+  width: 480px;
+  margin: 2em auto;
+}
+.post-content .post-title a {
+	font-size: 20px;
+}
+.crp_title {
+  font-size: 16px;
+  text-transform: uppercase;
+  font-weight: bold;
+}
+.underlined-heading {
+	border-bottom: 2px solid #ddd;
+  width: auto;
+  text-align: center;
+  margin: 0 auto 1em auto;
+}
+.home-recent-posts-section {
+	width: 90%;
+	margin: 2em auto;
+}
+.home-recent-posts-section .apbReadMore {
+	display: none;
+}
+.home-recent-posts-section .apbDefault {
+	box-shadow: 1px 1px 0px 0px #eee, -1px -1px 0 0 #eee;
+  margin-top: 1px;
 }
